--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "chartist": "^0.10.1",
+    "react-chartist": "^0.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
