--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@google-cloud/language": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chartist": "^0.11.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "prop-types": "^15.6.2",
     "validator": "^10.10.0"
   },
   "devDependencies": {
