--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "chartist": "^0.10.1",
     "express": "^4.16.4",
     "jwt-decode": "^2.2.0",
     "react": "^16.7.0",
+    "react-chartist": "^0.13.1",
     "react-dom": "^16.7.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "chartist": "^0.10.1",
-    "react-chartist": "^0.13.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
