--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "chartist": "^0.10.1",
     "express": "^4.16.4",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-chartist": "^0.13.1",
     "react-dom": "^16.7.0",
