--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chartist": "^0.11.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "google-search-results-nodejs": "^0.1.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.1",
     "passport": "^0.4.0",
