--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chartist": "^0.10.1",
+    "chartist-plugin-tooltips-updated": "0.0.20",
     "express": "^4.16.4",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
