--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /config/keys.js
+/config/keys_dev.js
 /config/google_key.json
 # line above may be wrongo
 testing
