--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "prop-types": "^15.6.2",
-    "validator": "^10.10.0"
+    "validator": "^10.10.0",
+    "node": "^11.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
